# IO_project-chess

./: Diagram.vpp  Diagram.vux  Szachy.vpp  Zasady SOLID.txt
AktualnyDiagram/: szachyyyy.vpp  szachyyyy.vpp.bak_000f  szachyyyy.vpp.bak_001d  szachyyyy.vpp.bak_002d  szachyyyy.vpp.bak_003d  szachyyyy.vux
Chess/: .gitignore  main.cpp  ranking.txt  settings.txt  your_program
Chess/src/: AI.h  Board.cpp  Board.h  Color.h  Game.cpp  Game.h  InputNotationManager.h  Movement.h  Notation.h  Piece.cpp  Piece.h  Pos.h  Ranking.cpp  Ranking.h  Settings.cpp  Settings.h  UserScore.h  Utils.cpp  Utils.h
Chess/unit-tests/rendering/: CMakeLists.txt  rendering-test.cpp
Chess/unit-tests/settings/: CMakeLists.txt  settings-test.cc
